# open-nptls-python

./: .gitignore  README.md  config.py  main2.py  nptls.py  pyproject.toml  requirements.txt  test_client2.py
examples/: client_example.py  server_example.py
src/nptls/: __init__.py  nptls.py
src/nptls/utils/: notepaper.py  pack.py
utils/: ecdh.py
